# control-parque-vehicular-frontend

./: Cargo.toml  README.md  index.html
src/: api_response.rs  app.rs  error.rs  main.rs  utils.rs
src/components/: button.rs  card.rs  collapsible.rs  dropdown.rs  footer.rs  hour.rs  icon.rs  main_section.rs  menu.rs  mod.rs  modal.rs  navbar.rs  pagination.rs  sidebar.rs  tabs.rs  user_context_provider.rs
src/components/calendar/: calendar.rs  color.rs  language.rs  mod.rs
src/components/filter_search/: dropdown.rs  filter_search.rs  mod.rs
src/components/form/: collapsible.rs  form.rs  icon.rs  input_field.rs  item.rs  mod.rs  select_field.rs  static_field.rs
src/components/profile/: password.rs
src/components/toast/: container.rs  mod.rs  toast.rs  toaster.rs
src/components/upload/: file_upload.rs  mod.rs  picture.rs  pictures.rs
src/components/user/: item.rs  mod.rs
src/components/vehicule/: mod.rs  vehicule_item.rs  vehicule_list.rs
src/context/: mod.rs  user_context_provider.rs  vehicule.rs
src/features/: mod.rs
src/hooks/: user_context.rs
src/layout/: mod.rs  navbar.rs  sidebar.rs
src/pages/: home.rs  login.rs  logout.rs  mod.rs  not_found.rs  profile.rs  request_vehicule.rs  signup.rs  user_edit.rs  users.rs  vehicule_edit.rs  vehicule_register.rs  vehicules.rs
src/routes/: home.rs  login.rs  logout.rs  mod.rs  register.rs
src/services/: admin.rs  auth.rs  mod.rs  normal.rs  profile.rs  request.rs  vehicule.rs
src/types/: department.rs  mod.rs  multipart.rs  user.rs  vehicule.rs
src/utils/: class.rs  forms.rs  macros.rs  mod.rs  modal.rs  utils.rs
static/: style.css
static/css/: style.css
static/scss/: _card.scss  _form.scss  _hero-background.scss  _misc.scss  _modal.scss  _table.scss  _tiles.scss  _title-bar.scss  _toast.scss  main.scss
(+121 files in other folders)
