[package]
name = "control-parque-vehicular-yew-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.84"
yew = { version = "0.20.0", features = ["csr", "ssr", "hydration"] }
yew-router = "0.17.0"
reqwasm = "0.5.0"
js-sys = "0.3.61"
wasm-bindgen-futures = "0.4.34"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
yew-hooks = "0.2.0"
console_log = "0.2.1"
log = "0.4.17"
gloo = "0.8.0"
validator = { version = "0.16.0", features = ["derive"] }

[dependencies.web-sys]
version = "0.3.61"
