[package]
name = "control-parque-vehicular-yew-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.84"
yew = { version = "0.20.0", features = ["csr", "ssr", "hydration"] }
yew-router = "0.17.0"
js-sys = "0.3.61"
wasm-bindgen-futures = "0.4.34"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
yew-hooks = "0.2.0"
console_log = "0.2.1"
log = "0.4.17"
gloo = "0.8.0"
validator = { version = "0.16.0", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
getrandom = { version = "0.2.8", features = ["js"] }
base64 = "0.21.0"
reqwest = { version = "0.11.18", features = ["json", "multipart"] }
common = { path = "../common/", features = ["frontend"] }
chrono-utilities = "0.0.0-alpha1"
chrono-tz = { version = "0.8.2", features = ["serde"] }

[dependencies.web-sys]
version = "0.3.61"
features = [
    "HtmlDialogElement",
]
